language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_private_type_from_reference.snap
---
source: language-server/src/tests/reference.rs
expression: "\ntype Wibble { Wibble }\n\nfn main() -> Wibble {\n  todo\n}\n\nfn wobble(w: Wibble) {\n  todo\n}\n"
---
-- app.gleam

type Wibble { Wibble }
     ▔▔▔▔▔▔           

fn main() -> Wibble {
             ↑▔▔▔▔▔  
  todo
}

fn wobble(w: Wibble) {
             ▔▔▔▔▔▔   
  todo
}
