language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_private_type_variant_from_reference.snap
---
source: language-server/src/tests/reference.rs
expression: "\ntype Wibble { Wibble }\n\nfn main() {\n  let _ = Wibble\n  Wibble\n}\n\nfn wobble() {\n  Wibble\n  wobble()\n}\n"
---
-- app.gleam

type Wibble { Wibble }
              ▔▔▔▔▔▔  

fn main() {
  let _ = Wibble
          ↑▔▔▔▔▔
  Wibble
  ▔▔▔▔▔▔
}

fn wobble() {
  Wibble
  ▔▔▔▔▔▔
  wobble()
}
